--- a/index.html
+++ b/index.html
@@ -34,6 +34,8 @@
 		<button onclick="calculate()">=</button>
 		<button onclick="addOperator('*')">*</button>
 		<button onclick="addOperator('/')">/</button>
+		<button onclick="clearDisplay()">Clear</button>
+
 	</div>
 
     <script src="script.js"></script>
